# langchain-course

./: pyproject.toml  requirements.txt
Agentic-Langgraph/: 1-BasicChatbot.ipynb
langchain-course/: 1-langchain-intro.ipynb  2-Model Integration.ipynb  3-Tools.ipynb  4-messages.ipynb  5-structured-output.ipynb  6-Middleware.ipynb
