[project]
name = "langchain-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "langchain>=1.3.10",
    "langchain-community>=0.4.2",
    "langchain-google-genai>=4.2.5",
    "langchain-groq>=1.1.3",
    "langchain-mistralai>=1.1.5",
    "langchain-openai>=1.3.2",
    "python-dotenv>=1.2.2",
]
